--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,26 +3,23 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@article{abdalgawad2021generative,
+  title={Generative deep learning to detect cyberattacks for the IoT-23 dataset},
+  author={Abdalgawad, Nada and Sajun, A and Kaddoura, Y and Zualkernan, Imran A and Aloul, F},
+  journal={IEEE Access},
+  volume={10},
+  pages={6430--6441},
+  year={2021},
+  publisher={IEEE}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@inproceedings{aloul2021network,
+  title={Network intrusion detection on the IoT edge using adversarial autoencoders},
+  author={Aloul, Fadi and Zualkernan, Imran and Abdalgawad, Nada and Hussain, Lana and Sakhnini, Dara},
+  booktitle={2021 International Conference on Information Technology (ICIT)},
+  pages={120--125},
+  year={2021},
+  organization={IEEE}
 }
 
 @article{PhysRev.47.777,
