--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,6 +4,7 @@
 @string{aps = {American Physical Society,}}
 
 @article{abdalgawad2021generative,
+  bibtex_show={true},
   title={Generative deep learning to detect cyberattacks for the IoT-23 dataset},
   author={Abdalgawad, Nada and Sajun, A and Kaddoura, Y and Zualkernan, Imran A and Aloul, F},
   journal={IEEE Access},
@@ -14,6 +15,7 @@
 }
 
 @inproceedings{aloul2021network,
+  bibtex_show={true},
   title={Network intrusion detection on the IoT edge using adversarial autoencoders},
   author={Aloul, Fadi and Zualkernan, Imran and Abdalgawad, Nada and Hussain, Lana and Sakhnini, Dara},
   booktitle={2021 International Conference on Information Technology (ICIT)},
