--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,7 +11,8 @@ string{aps = {American Physical Society,}}
   volume={10},
   pages={6430--6441},
   year={2021},
-  publisher={IEEE}
+  publisher={IEEE},
+  selected={true}
 }
 
 @inproceedings{aloul2021network,
@@ -21,7 +22,8 @@ string{aps = {American Physical Society,}}
   booktitle={2021 International Conference on Information Technology (ICIT)},
   pages={120--125},
   year={2021},
-  organization={IEEE}
+  organization={IEEE},
+  selected={true}
 }
 
 %book{einstein1956investigations,
